<!--
  ~ /**
  ~  * Created by Mateusz Idziejczak on 05.03.2022
  ~  * Copyright (c) 2022 . All rights reserved.
  ~  * Last modified 10/24/22, 11:44 PM
  ~  */
  -->

<resources>
    <string name="app_name">Parafia w Zakrzewie</string>
    <string name="preference_file_key">preference_file_key</string>
    <string name="first_app_use">first_app_use</string>
    <string name="go_download_data">Przejdź do ekranu głównego i odśwież aby pobrać dane</string>
    <string name="photo">Zdjęcie</string>
    <string name="click_or_swipe">Kliknij tu lub przeciągnij z góry do dołu aby odświeżyć</string>
    <string name="ogloszenia">Ogłoszenia</string>
    <string name="aktualnosci">Aktualności</string>
    <string name="intencje">Intencje</string>
    <string name="parafia">Parafia</string>
    <string name="photos">Zdjęcia</string>
    <string name="contact">Kontakt</string>
    <string name="donate">Złóż ofiarę</string>
    <string name="oltarz">Ołtarz</string>
    <string name="msze">Msze święte</string>
    <string name="spowiedz">Spowiedź</string>
    <string name="cmentarz">Cmentarz</string>
    <string name="kontakt">Kontakt</string>
</resources>
