<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ /**
  ~  * Created by Mateusz Idziejczak on 05.03.2022
  ~  * Copyright (c) 2023 . All rights reserved.
  ~  * Last modified 9/18/23, 4:07 PM
  ~  */
  -->

<layout>

    <data>

        <variable
            name="vm"
            type="pl.godziszewo.kosciol.presentation.viewmodel.HomeViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/home_swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".kosciolui.ui.home.HomeFragment">

            <!--            <Button-->
            <!--                android:id="@+id/main_btn_refresh"-->
            <!--                style="@style/Widget.Material3.Button.OutlinedButton"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:layout_marginTop="10dp"-->
            <!--                android:text="@string/click_or_swipe"-->
            <!--                android:textSize="15sp" />-->
            <androidx.cardview.widget.CardView
                android:id="@+id/home_image_cardview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:elevation="10dp"
                app:cardCornerRadius="15dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/oltarz"
                    app:srcCompat="@drawable/glowne" />
            </androidx.cardview.widget.CardView>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/home_third_row"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@id/home_fourth_row"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/home_second_row"
                    app:layout_constraintVertical_weight="1">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/home_card_cemetery"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/pink"
                        app:cardElevation="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/home_card_history"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeWidth="0dp">

                        <TextView
                            android:id="@+id/home_text_cemetery"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/cmentarz"
                            android:textColor="@color/white_pink"
                            android:textSize="20sp"
                            app:drawableTint="@color/white_pink"
                            app:drawableTopCompat="@drawable/cross_solid" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/home_card_history"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/pink"
                        app:cardElevation="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/home_card_cemetery"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeWidth="0dp">

                        <TextView
                            android:id="@+id/home_text_history"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/biuro"
                            android:textColor="@color/white_pink"
                            android:textSize="20sp"
                            app:drawableTint="@color/white_pink"
                            app:drawableTopCompat="@drawable/church_solid" />
                    </com.google.android.material.card.MaterialCardView>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/home_first_row"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@id/home_second_row"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_weight="1">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/home_card_masses"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/pink"
                        app:cardElevation="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/home_card_confession"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeWidth="0dp">

                        <TextView
                            android:id="@+id/home_text_masses"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/msze"
                            android:textColor="@color/white_pink"
                            android:textSize="20sp"
                            app:drawableTint="@color/white_pink"
                            app:drawableTopCompat="@drawable/dove_solid" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/home_card_confession"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/pink"
                        app:cardElevation="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/home_card_masses"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeWidth="0dp">

                        <TextView
                            android:id="@+id/home_text_confession"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/spowiedz"
                            android:textColor="@color/white_pink"
                            android:textSize="20sp"
                            app:drawableTint="@color/white_pink"
                            app:drawableTopCompat="@drawable/person_praying_solid" />
                    </com.google.android.material.card.MaterialCardView>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/home_second_row"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toTopOf="@+id/home_third_row"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/home_first_row"
                    app:layout_constraintVertical_weight="1">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/home_card_intentions"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/pink"
                        app:cardElevation="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/home_card_announcements"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeWidth="0dp">

                        <TextView
                            android:id="@+id/home_text_intentions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/intencje"
                            android:textColor="@color/white_pink"
                            android:textSize="20sp"
                            app:drawableTint="@color/white_pink"
                            app:drawableTopCompat="@drawable/hands_praying_solid" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/home_card_announcements"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/pink"
                        app:cardElevation="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/home_card_intentions"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeWidth="0dp">

                        <TextView
                            android:id="@+id/home_text_announcements"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ogloszenia"
                            android:textColor="@color/white_pink"
                            android:textSize="20sp"
                            app:drawableTint="@color/white_pink"
                            app:drawableTopCompat="@drawable/list_solid" />
                    </com.google.android.material.card.MaterialCardView>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/home_fourth_row"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/home_third_row"
                    app:layout_constraintVertical_weight="1">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/home_card_news"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/pink"
                        app:cardElevation="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/home_card_contact"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeWidth="0dp">

                        <TextView
                            android:id="@+id/home_text_news"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/aktualnosci"
                            android:textColor="@color/white_pink"
                            android:textSize="20sp"
                            app:drawableTint="@color/white_pink"
                            app:drawableTopCompat="@drawable/bell_solid" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/home_card_contact"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="10dp"
                        app:cardBackgroundColor="@color/pink"
                        app:cardElevation="5dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/home_card_news"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeWidth="0dp">

                        <TextView
                            android:id="@+id/home_text_contakt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/kontakt"
                            android:textColor="@color/white_pink"
                            android:textSize="20sp"
                            app:drawableTint="@color/white_pink"
                            app:drawableTopCompat="@drawable/envelope_solid" />
                    </com.google.android.material.card.MaterialCardView>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>